--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<meta name="theme-color" content="#000000" />
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>playground</title>
+		<title>fibi</title>
 	</head>
 	<body>
 		<div id="app"></div>
